New module with UTF-8 Fonts added
- new module openpdf-fonts-extra
- README.md updated
- Only one Liberation Font in OpenPDF
- Liberation Fonts in StandardFonts deprecated
- Liberation Fonts moved to new module openpdf-fonts-extra
- More Tests for StandardFonts
- Unicode, Greek and Cyrillic tests moved to openpdf-fonts-extra
- New Liberation enum with all Liberation fonts

--- a/pom.xml
+++ b/pom.xml
@@ -25,6 +25,7 @@
         <module>openpdf</module>
         <module>pdf-swing</module>
         <module>pdf-toolbox</module>
+        <module>openpdf-fonts-extra</module>
     </modules>
 
     <name>OpenPDF - Free and Open PDF</name>
